--- a/index.html
+++ b/index.html
@@ -4,34 +4,120 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1{
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 1em;
-            text-decoration: underline;
-            color: gold;
-            text-transform: capitalize;
-            text-align: center;
-        }
-        img{
-            width:50%;
-        }
-        footer{
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size: 2em;
-            color: blueviolet;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>BIENVENIDOS A GIT-GITHUB</h1>
-    <br>
-    <img src="Imagenes/premium_photo-1666672388644-2d99f3feb9f1.jpg">
+    <h1>Redes sociales</h1>
     <br>
     <br>
-    <footer>
-        &copy;MI PRIMER BAUTIZO CON GIT
-    </footer>
+    <header>
+        <hr>
+        Bienvenido al mundo de las redes sociales
+        <hr>
+    </header>
+    <div>
+        <nav>
+            <ul>
+                <li><a href="#Introducion">Introducion</a></li>
+                <li><a href="">contactenos</a></li>
+                <li><a href="Biografia.html">A cerca de mi</a></li>
+            </ul>
+        </nav>
+    </div>
+    <main>
+        <h2 align="center">Introducion a las Redes sociales</h2>
+        <br>
+        <p>
+           En las últimas dos décadas, el mundo ha sido testigo de un fenómeno sin precedentes que ha transformado la manera en que los seres humanos se comunican, interactúan y construyen relaciones: las redes sociales. Estos espacios digitales, que en sus inicios se percibían como simples plataformas de entretenimiento o sitios para compartir información básica entre conocidos, se han convertido hoy en uno de los pilares fundamentales de la vida cotidiana, tanto en el ámbito personal como en el profesional. Su impacto es tan amplio que resulta difícil imaginar la vida contemporánea sin la presencia de Facebook, Twitter (ahora X), Instagram, TikTok, LinkedIn, WhatsApp o YouTube, por mencionar solo algunas. Más allá de ser simples herramientas tecnológicas, las redes sociales han configurado un ecosistema complejo que moldea la cultura, la economía, la política, la educación y la forma en que las personas conciben el mundo.
+El surgimiento de las redes sociales se dio como respuesta a una necesidad básica del ser humano: la de comunicarse y compartir experiencias. Sin embargo, lo que en un comienzo era una extensión digital de las relaciones interpersonales tradicionales, evolucionó rápidamente hasta convertirse en un espacio con dinámicas propias, en donde los usuarios no solo consumen información, sino que también la producen, la difunden y la transforman. Este carácter bidireccional y participativo explica en gran medida la velocidad con la que las redes sociales se expandieron a nivel global. Hoy, millones de personas de diferentes edades, culturas y contextos socioeconómicos encuentran en ellas un lugar de encuentro, expresión y pertenencia.
+Uno de los aspectos más notables de las redes sociales es su capacidad para derribar las barreras geográficas y temporales que tradicionalmente limitaban la comunicación. Un mensaje publicado en cualquier parte del mundo puede ser visto en cuestión de segundos por miles o millones de usuarios de otros continentes. Este fenómeno ha permitido la conformación de comunidades virtuales que trascienden fronteras, uniendo a personas con intereses comunes sin importar la distancia física. Desde grupos de aficionados a un deporte, hasta movimientos sociales que luchan por causas políticas o ambientales, las redes sociales se han consolidado como un escenario en el que la voz individual puede convertirse en un clamor colectivo con un alcance nunca antes visto.
+Al mismo tiempo, su papel en la vida cotidiana ha generado cambios significativos en la manera en que los individuos construyen su identidad. La creación de perfiles personales, la publicación de fotografías, la edición de videos y la redacción de estados o historias permiten a los usuarios proyectar una imagen de sí mismos, moldeando cómo desean ser percibidos por los demás. En este sentido, las redes sociales no solo son un medio de comunicación, sino también una plataforma de autopresentación y validación social. La búsqueda de aprobación mediante los “me gusta”, comentarios o seguidores ha introducido nuevas dinámicas psicológicas que pueden influir de forma positiva o negativa en la autoestima y en el bienestar emocional de los usuarios.
+En el ámbito económico, las redes sociales han revolucionado la manera en que las empresas interactúan con los consumidores. El marketing digital, los influencers y las campañas virales se han convertido en estrategias fundamentales para posicionar marcas y productos en un mercado cada vez más competitivo y globalizado. El hecho de que millones de personas pasen varias horas al día en estas plataformas convierte a las redes sociales en un canal de comunicación masivo con un potencial enorme para llegar a audiencias específicas. Esto no solo ha democratizado la publicidad, permitiendo que pequeñas empresas también accedan a este espacio, sino que además ha impulsado el surgimiento de nuevas profesiones y modelos de negocio ligados al mundo digital.
+
+            </p>
+            <br>
+            <center><img src="imagenes/redes sociales.jpg" width="50%"></center>
+    </section>
+    </main>
+   <br>
+    <h1 Align="center">Tipos de redes sociales</h1>
+    <ol>
+        <li>tiktok</li>
+        <li>instagram</li>
+        <li>Discord</li>
+    </ol>
+    <br>
+    <section id="tiktok">
+        <h2><strong>tiktok</strong></h2>
+        <p>
+        TikTok es una red social china de videos cortos creada por ByteDance, que permite a los usuarios grabar, editar y compartir videos verticales de entre 1 segundo y 10 minutos, usando audio, música, filtros y efectos. La plataforma se enfoca en contenido auténtico y rápido de consumir, como bailes, comedia, tutoriales y retos, y cuenta con un feed principal llamado "Para Ti" para descubrir videos populares. Es una red social muy popular entre los jóvenes, aunque cada vez más utilizada por empresas y creadores para monetizar su contenido y conectar con audiencias. 
+        </p>
+        <br>
+        <br>
+            <td>
+                <h2>Zhang Yiming</h2>
+            </td>
+            <br>
+            <td>
+                <h2>2016</h2>
+            </td>
+        <br>
+        <center><img src="Imagenes/Tik tok.jpg" width="50%"></center>
+    </section>
+    <br>
+    <section id="instagram">
+        <h2><strong>instragram</strong></h2>
+        <p>
+        
+Instagram es una red social visual propiedad de Meta, que permite a los usuarios compartir fotos y vídeos, interactuar con otros usuarios y explorar contenido de interés. Se caracteriza por sus opciones de edición de fotos y vídeos con filtros y efectos, la publicación de contenido temporal en Stories, la creación de vídeos cortos en Reels, y la posibilidad de interactuar a través de mensajes privados y comentarios. Fue lanzada en 2010 por Kevin Systrom y Mike Krieger y hoy cuenta con miles de millones de usuarios activos en todo el mundo. 
+        </p>
+        <br>
+            <td>
+                <h2> Kevin Systrom y Mike Krieger</h2>
+            </td>
+        <br>
+            <td>
+                <h2>2010</h2>
+            </td>
+        <br>
+        <center><img src="Imagenes/Instagram.jpg" width="50%"></center>
+    </section>
+    <br>
+    <section id="Discord">
+        <h2><strong>Discord</strong></h2>
+        <p>
+         Discord es actualmente una de las plataformas de comunicación más utilizadas en el mundo, especialmente por comunidades de videojuegos, aunque con el tiempo se ha expandido a ámbitos educativos, laborales y sociales. Su historia se remonta al año 2015, cuando los emprendedores Jason Citron y Stan Vishnevskiy decidieron crear una herramienta que resolviera los problemas de comunicación que existían en los videojuegos en línea.
+         Antes de Discord, los jugadores usaban programas como TeamSpeak, Skype o Ventrilo para hablar mientras jugaban. Sin embargo, estas aplicaciones presentaban dificultades: eran complicadas de configurar, consumían demasiados recursos del sistema o tenían mala calidad de audio. Jason Citron, que ya había trabajado en proyectos relacionados con videojuegos —fundó OpenFeint, una red social para móviles enfocada en juegos, que fue vendida a la empresa GREE en 2011—, conocía de primera mano esas limitaciones. Junto con Stan Vishnevskiy, quien compartía su pasión por el desarrollo de software y el gaming, comenzaron a diseñar una plataforma que fuera rápida, fácil de usar y gratuita.
+         Fue así como en mayo de 2015 se lanzó oficialmente Discord. La aplicación se presentó como una alternativa ligera que ofrecía chat de voz, texto y video en tiempo real, con la posibilidad de crear “servidores” donde se organizaran canales temáticos para diferentes grupos o comunidades. Su diseño intuitivo y su calidad técnica llamaron rápidamente la atención de los jugadores, quienes empezaron a adoptarla como su principal medio de comunicación.
+         El crecimiento de Discord fue explosivo. En apenas un año alcanzó millones de usuarios y se convirtió en la herramienta preferida para juegos en línea competitivos como League of Legends, Minecraft o Counter-Strike. Con el paso del tiempo, la plataforma dejó de estar ligada únicamente al ámbito gamer y se transformó en un espacio versátil para todo tipo de comunidades: desde grupos de estudio y clubes de lectura, hasta equipos de trabajo remoto y fanáticos de la música o el arte.
+         Hoy en día, Discord cuenta con más de 150 millones de usuarios activos mensuales y se ha consolidado como una de las plataformas sociales más importantes del mundo digital. Lo que comenzó en 2015 como una solución para la comunicación de jugadores, gracias a la visión de Jason Citron y Stan Vishnevskiy, se ha convertido en una herramienta global que redefine cómo las personas se conectan, colaboran y construyen comunidades en línea.
+
+        </p>
+        <br>
+            <td>
+                <h2>Jason Citron y Stan Vishnevskiy</h2>
+            </td>
+            <br>
+            <td>
+                <h2>2015</h2>
+            </td>
+        <br>
+        <center><img src="imagenes/discord.jpg" width="50%"></center>
+         <br>
+    <section id="introducion"></section>
+    <table>
+        <tr>
+            <th colspan="5">Redes sociales</th>
+        </tr>
+        <tr>
+            <td><h1>tiktok</h1></td>
+            <td><h1>instagram</h1></td>
+            <td><h1>Discord</h1></td>
+            <td><h1></h1></td>
+        </tr>
+    </table>
+<footer>
+        &copy; Steve Bonilla--Mi primer bautizo con git
+</footer>
 </body>
 </html>
